--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "express-inventory-application",
 	"version": "0.0.0",
-	"private": true,
+	"private": false,
 	"scripts": {
 		"start": "node ./bin/www",
 		"devstart": "nodemon ./bin/www",
